# burst-link-protocol

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml
platform/esp-idf/: CMakeLists.txt
platform/zephyr/: CMakeLists.txt
src/: burst_interface.h  crc.cpp  crc_blp.c  crc_blp.h  decoder.c  decoder.cpp  decoder.h  encoder.c  encoder.cpp  python_bindings.cpp
src/burst/: burst_decoder.c  burst_decoder.h  burst_encoder.c  burst_encoder.h  burst_generic.h  burst_interface.py
src/burst_link_protocol/: serial_burst_interface.py
test/: test.py  test_c_decoder.py  test_c_validation.py  test_python_validation.py  test_speed.py
