[tool.poetry]
name = "burst"
version = "0.1.0"
description = "A Python package with C extension"
authors = ["Floris vernieuwe <floris@vernieuwe.eu>"]
package-mode = true

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
cobs = "^1.2.1"
numpy = "^2.2.3"
crc = "^7.1.0"

[tool.poetry.group.dev.dependencies]
scikit-build-core = {extras = ["pyproject"], version = "^0.10.7"}
nanobind = "^2.5.0"
pytest = "^8.3.4"

[project]
name = "nanobind-example"
version = "0.0.3"
description = "An example minimal project that compiles bindings using nanobind and scikit-build"
requires-python = ">=3.8"

[build-system]
requires = ["scikit-build-core >=0.10", "nanobind >=1.3.2"]
build-backend = "scikit_build_core.build"


[tool.scikit-build]
# Protect the configuration against future changes in scikit-build-core
minimum-version = "build-system.requires"
cmake.build-type = "Debug" #Enable to create a debug build
cmake.args = ["-DCMAKE_EXPORT_COMPILE_COMMANDS=ON"]

# Setuptools-style build caching in a local directory
build-dir = "build/{wheel_tag}"

# Build stable ABI wheels for CPython 3.12+
wheel.py-api = "cp312"
